Volenteer overal vervangen door volunteer (ook in namespaces)

--- a/web/uml/volunteerMatching.class.violet.html
+++ b/web/uml/volunteerMatching.class.violet.html
@@ -156,7 +156,7 @@ endDateTime</text>
       </name>
       <attributes id="52" justification="0" size="4" underlined="false">
         <text>refugee
-volenteer</text>
+volunteer</text>
       </attributes>
       <methods id="53" justification="0" size="4" underlined="false">
         <text></text>
